--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+	text-decoration: none;
+	box-sizing: border-box;
+	outline: none;
+}
+body {
+  min-width: 480px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
